--- a/src/main/resources/pom.xml
+++ b/src/main/resources/pom.xml
@@ -1,6 +1,9 @@
-<!-- Jackson -->
-<dependency>
-    <groupId>org.codehaus.jackson</groupId>
-    <artifactId>jackson-mapper-asl</artifactId>
-    <version>1.9.13</version>
-</dependency>
+<dependencies>
+    <!-- Jackson -->
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.9.13</version>
+    </dependency>
+
+</dependencies>
