--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 		exclude group: "org.hamcrest", module: "hamcrest-core" }
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+	compile 'mysql:mysql-connector-java'
 
 }
 
