https 적용, instagram 계정정보 받아오기

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,9 @@ spring:
             client-id: 892081326364-6qjj1qiei6i4sidmrcv1fdp2h3v8ilo3.apps.googleusercontent.com
             client-secret: rcLOgY9kqXgrLU5k5cU0DR2O
           facebook:
-            client-id: 285297796589349
+            client-id: 1952196254945531
             client-secret: 6deeeea39fb623654e85d813b6edf679
+
   thymeleaf:
     prefix=classpath: templates/
     suffix: .html
@@ -48,5 +49,11 @@ logging.level:
   org.springframework.security: DEBUG
   org.springframework.web: DEBUG
 
-
+server:
+  ssl:
+    key-store: 4rt-keystore.p12
+    key-store-type: PKCS12
+    key-store-password: tlsghdcjf41!
+    key-alias: spring
+  port: 8443
 # org.hibernate.type: trace
