--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,11 @@ dependencies {
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 		exclude group: "org.hamcrest", module: "hamcrest-core" }
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
-
+	// swagger
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.21'
+	compile group: 'io.swagger', name: 'swagger-models', version: '1.5.21'
 }
 
 
